# open-iupac-namer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: chain_stems.json  element_seniority.json  functional_groups.json  fusion_components.json  heteroelement_oxoacids.json  hw_tables.json  infix_rules.json  maingroup_oxoacid_roots.json  multipliers.json  polynuclear_p_oxoacids.json  retained_names.json  retained_names_expanded.json  retained_rings.json  substituent_names.json
docs/: ARCHITECTURE_ASSEMBLY.md  ARCHITECTURE_BUILD_PLAN.md  ARCHITECTURE_DATA_STRUCTURES.md  ARCHITECTURE_ENGINE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_PERCEPTION.md  ARCHITECTURE_STRATEGY.md
eval/: authoritative_eval.py  run_eval.sh  testset.json
iupac_namer/: __init__.py  assembly.py  data_loader.py  engine.py  isotope.py  strategy.py  types.py
tests/: conftest.py  test_acid_infix_composition.py  test_acyl_pseudohalide.py  test_annulene.py  test_anthracene_locants.py  test_aryl_heavy_substituent.py  test_assembly.py  test_benzaanthracene_locants.py  test_benzo_fused_bridged.py  test_benzogquinoxaline_locants.py  test_benzotriazole_benzotriazine.py  test_bridged_aromatic_ene.py  test_bridged_tetrahedral_stereo.py  test_bridgehead_n_pyridines.py  test_carbocyclic_indicated_h.py  test_carbonic_acids.py  test_chain_anions.py  test_chalcogen_acid_modifiers.py  test_chalcogen_fg_additions.py  test_charge_perception.py  test_coumaran_atom_locants.py  test_cyclic_suffixes.py  test_data_loader.py  test_decalin_cis_trans.py  test_demoted_acyl_substituents.py  test_diatomic.py  (+83 more)
(+48 files in other folders)
